# wtfshell

./: .gitignore  Makefile  Makefile.in  README  autogen.sh  config.h.in  config.status  configure  configure.ac  configure.scan
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2  traces.3
src/: Makefile  Makefile.am  Makefile.in  ascii.h  command.c  command.h  common.c  common.h  functions.c  functions.h  list.c  list.h  main.c  wtfshell  wtfshell.c  wtfshell.h
src/.deps/: functions.Po  main.Po
